add js make players, generate dice, push dice total to player objects

--- a/index.html
+++ b/index.html
@@ -9,6 +9,16 @@
     <title></title>
   </head>
   <body>
-
+    <div class="container">
+      <div class="jumbotron">
+        <h1>Piggy Dice "Squeal af"</h1>
+      </div>
+      <form id="newPlayer">
+          <input type="text" name="playerName" value="" id="playerName"><br>
+          <button type="submit" class="btn btn-warning" id="formButton">Complete from</button>
+      </form>
+      <button type="button" class="btn btn-danger" id="roll">Roll the dice!</button>
+      <button type="button" class="btn btn-primary" id="hold">Hold bro</button>
+    </div>
   </body>
 </html>
