Begin adding html to display player and score

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
       </form>
       <button type="button" class="btn btn-danger" id="roll">Roll the dice!</button>
       <button type="button" class="btn btn-primary" id="hold">Hold bro</button>
+
+      <div class="scoreOutput">
+        <h3 id="playerList"></h3>
+        <p><span id="playerScore"></span></p>
+      </div>
     </div>
   </body>
 </html>
