--- a/index.html
+++ b/index.html
@@ -2,10 +2,12 @@
 <html>
   <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" type="text/css" href="makeItRain.css">
     <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
     <script src="js/jquery-3.2.1.js"></script>
     <script src="js/scripts.js"></script>
+    <script src="makeItRain.js" > </script>
     <title></title>
   </head>
   <body>
@@ -13,16 +15,19 @@
       <div class="jumbotron">
         <h1>Piggy Dice "Squeal af"</h1>
       </div>
-      <form id="newPlayer">
-          <input type="text" name="playerName" value="" id="playerName"><br>
-          <button type="submit" class="btn btn-warning" id="formButton">Complete from</button>
-      </form>
-      <button type="button" class="btn btn-danger" id="roll">Roll the dice!</button>
-      <button type="button" class="btn btn-primary" id="hold">Hold bro</button>
+      <div class="gameBoard">
+        <form id="newPlayer">
+            <input type="text" name="playerName" value="" id="playerName"><br>
+            <button type="submit" class="btn btn-warning" id="formButton">Complete from</button>
+        </form>
+        <button type="button" class="btn btn-danger" id="roll">Roll the dice!</button>
+        <button type="button" class="btn btn-primary" id="hold">Hold bro</button>
+      </div>
+
+      <button type="button" class="btn btn-info" id="pigRain">Pigs?</button>
 
       <div class="scoreOutput">
-        <h3 id="playerList"></h3>
-        <p><span id="playerScore"></span></p>
+        
       </div>
     </div>
   </body>
