Create prototype branch to test shizz

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
       </div>
       <div class="gameBoard">
         <form id="newPlayer">
-            <input type="text" name="playerName" value="" id="playerName"><br>
+            <div class="form-group">
+              <label for="playerName">Enter your player name:</label>
+              <input type="text" name="playerName" value="" id="playerName">
+            </div>
             <button type="submit" class="btn btn-warning" id="formButton">Complete from</button>
         </form>
         <button type="button" class="btn btn-danger" id="roll">Roll the dice!</button>
